# MedEvalArena

./: .gitignore  AGENTS.md  CNAME  README.md  index.html  pyproject.toml  requirements.txt  robots.txt  sitemap.xml
configs/: config_anthropic-claude-haiku.yaml  config_anthropic.yaml  config_deepseek3.2.yaml  config_gemini-2.5-flash-lite.yaml  config_gemini.yaml  config_gpt-nano.yaml  config_gpt.yaml  config_gpt_miniquiz.yaml  config_grok.yaml  config_kimi-k2-thinking.yaml
cot_prompt_lib/: judge_mcq_validity_system_prompt.txt
data/: ABMS_specialties.csv  ABMS_specialties.xlsx  acc_vs_cost.csv  cost.csv  family_medicine_targets.csv  internal_medicine_targets.csv  judge_models.yaml  primary_specialty_table.csv  topic_to_abms.yaml  union_medicine_topics.xls.xlsx  usmle-ck-distribution.csv
quizbench/: README.md  aggregate_judges.py  aggregate_medical_scores.py  aggregate_results.py  aggregate_topics_round_robin.py  anthropic_message_batches.py  anthropic_utils.py  apply_topic_mapping.py  batch_generate_quiz.py  build_abms_valid_subset.py  categorize_quiz_topics.py  check_missing_judges_deep.py  clients.py  eval_quiz.py  eval_quiz_judge.py  evaluate_from_api.py  fetch_batch_output.py  generate_leaderboard_site.py  generate_quiz.py  generate_quiz_spec.py  inspect_batch_quiz_json.py  inter_judge_reliability.py  judge_utils.py  manifest_utils.py  medical_score_sensitivity.py  plot_acc_vs_cost.py  prem2026medevalarena.bib  prompt_templates.py  refresh_quizbench_manifest.py  run_batch_gen_quiz.py  run_batch_gen_quiz_anthropic.py  run_batch_gen_quiz_anthropic_legacy.py  (+13 more)
(+2849 files in other folders)
